--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">S170422 Zahra Soleimani</string>
+    <string name="galgeleg_game">Galgeleg Game!</string>
 </resources>
