--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">S170422 Zahra Soleimani</string>
     <string name="galgeleg_game">Galgeleg Game!</string>
+    <string name="start">start</string>
+    <string name="WriteYourName">write ur name</string>
 </resources>
