--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="galgeleg_game">Galgeleg Game!</string>
     <string name="start">start</string>
     <string name="WriteYourName">write ur name</string>
+    <string name="hi_and_welcome_to_galgeleg_game">Hi and Welcome To Galgeleg Game</string>
 </resources>
