--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">S170422 Zahra Soleimani</string>
+    <string name="s170422_Zahra_Soleimani_Galgeleg">S170422 Zahra Soleimani</string>
     <string name="galgeleg_game">Galgeleg Game!</string>
     <string name="start">start</string>
     <string name="WriteYourName">write ur name</string>
